Fix a spacing bug on the pricing template.

--- a/app/stylesheets/empire.scss
+++ b/app/stylesheets/empire.scss
@@ -648,7 +648,7 @@ html {
 						position: relative;
 						top: 10px;
 						left: -1px;
-    				padding: 12px 0 28px;
+    				padding: 10px 0 30px;
 						border-right: 1px solid #c7c6bd;
 						border-bottom: 1px solid #8a8a84;
 						border-left: 1px solid #c7c6bd;
